--- a/study.html
+++ b/study.html
@@ -6,12 +6,12 @@
     <title> Proff | Sua plataforma  de estudos online</title>
     
     <link rel="stylesheet" href="/style/main.css">
-    <link rel="stylesheet" href="/style/partials/page-landing.css">
+    <link rel="stylesheet" href="/style/partials/page-study.css">
     
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
 </head>
-<body id="page-landing">
+<body id="page-study">
 
     <div id="container">
   
@@ -20,7 +20,7 @@
         <h2>Sua plataforma de estudos online.</h2>
       </div>
   
-      <img class="hero-image" src="images/landing.svg" alt="Plataforma de estudos">
+      <img class="hero-image" src="images/study.svg" alt="Plataforma de estudos">
   
   
       <div class="buttons-container">
