--- a/give-classes.html
+++ b/give-classes.html
@@ -12,6 +12,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
+    <script src="/scripts/addField.js" defer></script>
 </head>
 <body id="page-give-classes">
 
@@ -83,7 +84,7 @@
 
             <fieldset id="schedule-items">
                 <legend>Horários disponiveis
-                    <button id="add-time">+ Novo Horário</button>
+                    <button type="button" id="add-time">+ Novo Horário</button>
                 </legend>
                 <div class="schedule-item">
                     <div class="select-block">
